# ecommerce

./: .gitignore  CNAME  Dockerfile  README.md  db.sqlite3  fly.toml  index.html  pyproject.toml  render.yaml  requirements.txt
cart/: cart.py  context_processors.py  urls.py
cart/templates/: cartSumary.html  formulario_pago.html  procesar_pago_mp.html
ecom/: db.sqlite3  index.html  settings.py
ecom/cart/: cart.py  urls.py  views.py
ecom/cart/templates/: cartSumary.html
ecom/ecom/: settings.py  urls.py
ecom/store/: admin.py  models.py  urls.py  views.py
ecom/store/migrations/: 0003_category_product_category.py  0004_product_category.py  0009_alter_architect_country_alter_architect_province.py  0012_remove_product_insale_remove_product_saleprice_and_more.py
ecom/store/templates/: about.html  base.html  home.html  login.html  navbar.html  planos.html  product.html  register.html
store/: models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_product_insale_product_saleprice_alter_product_price.py  0003_category.py  0005_category_image.py  0006_alter_category_image.py  0007_architect_face_product_code.py  0008_order_face.py  0010_face_category.py  0011_remove_product_code_alter_product_cantfloor_and_more.py  0013_face_price.py
store/templates/: about.html  architects.html  category.html  fachadas.html  home.html  login.html  navbar.html  product.html  products.html
virt/: pyvenv.cfg
virt/Scripts/: activate  activate.bat
