[tool.poetry]
name = "ecom2"
version = "0.1.0"
description = ""
authors = ["ENPera1994 <enpera1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
django = ">=4"
mercadopago = "^2.2.1"
pillow = "^10.2.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
